--- a/Microsoft.Windows.Toolkit.VisualStudio/packages.config
+++ b/Microsoft.Windows.Toolkit.VisualStudio/packages.config
@@ -20,4 +20,5 @@
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net461" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net451" developmentDependency="true" />
 </packages>
