--- a/Microsoft.Windows.Toolkit.SampleApp/project.json
+++ b/Microsoft.Windows.Toolkit.SampleApp/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
-    "Newtonsoft.Json": "8.0.3"
+    "Newtonsoft.Json": "8.0.3",
+    "StyleCop.Analyzers": "1.0.0"
   },
   "frameworks": {
     "uap10.0": {}
