--- a/Microsoft.Windows.Toolkit.Services/packages.config
+++ b/Microsoft.Windows.Toolkit.Services/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="portable46-net451+win81+wpa81" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="portable46-net451+win81+wpa81" developmentDependency="true" />
 </packages>
