--- a/Microsoft.Windows.Toolkit.UI.Controls/Microsoft.Windows.Toolkit.UI.Controls.csproj
+++ b/Microsoft.Windows.Toolkit.UI.Controls/Microsoft.Windows.Toolkit.UI.Controls.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RangeSelector\RangeChangedEventArgs.cs" />
     <Compile Include="RangeSelector\RangeSelector.cs" />
+    <Compile Include="SlidableListItem\SlidableListItem.cs" />
     <Compile Include="VariableSizedGridView\VariableSizedGridView.Properties.cs" />
     <Compile Include="VariableSizedGridView\VariableSizedGridView.cs" />
     <Compile Include="VariableSizedGridView\VariableSizedGridViewPanel.cs" />
@@ -90,6 +91,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="ResponsiveGridView\ResponsiveGridView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="SlidableListItem\SlidableListItem.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
