ImageEx placeholder related changes complete

--- a/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
+++ b/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
@@ -114,6 +114,7 @@
     <Content Include="Assets\Photos\ColumbiaRiverGorge.png" />
     <Content Include="Assets\Photos\GiantSlabInOregon.png" />
     <Content Include="Assets\Photos\GrandTetons.png" />
+    <Content Include="Assets\Photos\ImageExPlaceholder.jpg" />
     <Content Include="Assets\Photos\LakeAnnMushroom.png" />
     <Content Include="Assets\Photos\LunchBreak.png" />
     <Content Include="Assets\Photos\MilkyWayStHelensHikePurple.png" />
