--- a/Microsoft.Windows.Toolkit.SampleApp/project.json
+++ b/Microsoft.Windows.Toolkit.SampleApp/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Newtonsoft.Json": "8.0.3",
     "StyleCop.Analyzers": "1.0.0"
   },
